--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 Lambda/function.zip
+Terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/4.61.0/windows_386/terraform-provider-aws_v4.61.0_x5.exe
